app/vmui: fix mobile filters sidebar visibility (#1545)
### Describe Your Changes

Fix the Stream fields sidebar visibility on mobile.

Now the **Show filters** button correctly opens the sidebar on mobile
devices. Previously, the sidebar didn’t open.

Related issue: #1537

--- a/app/vmui/packages/vmui/src/components/FilterSidebar/style.scss
+++ b/app/vmui/packages/vmui/src/components/FilterSidebar/style.scss
@@ -16,14 +16,6 @@
   font-size: $font-size-small;
   z-index: 99;
 
-  &_hidden {
-    position: absolute;
-    left: -100vw;
-    opacity: 0;
-    z-index: -1;
-    pointer-events: none;
-  }
-
   &_mobile {
     position: fixed;
     left: 0;
